<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.libra.guli.module.schedule.viemodel.ScheduleViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/layout_titlebar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/titlebarHeight">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:drawableLeft="@drawable/ic_timer"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:onClick="@{vm.timerClick}"
                        android:singleLine="true"
                        android:text="@={vm.timer}"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/textSize16"
                        tools:text="08点30分" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp">

                        <ImageView
                            android:id="@+id/dot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginTop="6dp"
                            android:src="@drawable/ic_dot" />

                        <com.libra.guli.widget.LinedEditText
                            android:id="@+id/edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="4dp"
                            android:layout_toRightOf="@+id/dot"
                            android:background="@color/transparent"
                            android:gravity="top"
                            android:layerType="software"
                            android:lineSpacingExtra="16dp"
                            android:minHeight="100dp"
                            android:paddingBottom="10dp"
                            android:text="@={vm.content}"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/textSize14"
                            tools:text="奥斯卡的合法开始觉得发科技收到货反馈阿里山的咖啡机阿里斯顿就发了的咖啡机阿里山的空间发了啥快递放假了" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:onClick="@{vm.remindClick}"
                        android:orientation="vertical"
                        android:paddingBottom="12dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/remind"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/textSize14" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@{vm.remind}"
                            android:textColor="@color/gray999"
                            android:textSize="@dimen/textSize12" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:onClick="@{vm.ringClick}"
                        android:orientation="vertical"
                        android:paddingBottom="12dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ring"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/textSize14" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@{vm.ring}"
                            android:textColor="@color/gray999"
                            android:textSize="@dimen/textSize12" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingBottom="12dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="12dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:text="@string/vibrate"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/textSize14" />

                        <android.support.v7.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="@={vm.vibrate}" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>